variables.Variables.scala.error
Erreur de compilation :
Variables:17: error: value && is not a member of Int
  if(c = 0 && porteBiscuit()){
           ^Variables:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if(c = 0 && porteBiscuit()){
       ^