variables.Variables.scala.code
var c = 0
while(!estSurBiscuit() || porteBiscuit()){
  if(estSurBiscuit()){
    prendBiscuit()
  } else {
    if(!estSurBiscuit() && !porteBiscuit()){
      avance()
      c = c +1
    } else {
      recule()
      c = c - 1
    }
  }
  if(estSurBiscuit()){
    prendBiscuit()
  }
  if(c = 0 && porteBiscuit()){
    poseBiscuit()
  }
}